DBC22-3899: Fixing expanded map controls on mobile for RAHP

--- a/src/frontend/src/Components/report/ReportMap.scss
+++ b/src/frontend/src/Components/report/ReportMap.scss
@@ -10,8 +10,6 @@
 
     &:has(.side-panel.open) {
       position: absolute;
-      top: 0;
-      padding-top: 58px;
     }
   }
 
