--- a/src/frontend/src/pages/ReportRoadPage.scss
+++ b/src/frontend/src/pages/ReportRoadPage.scss
@@ -3,5 +3,4 @@
 .report-page {
     overflow-y: auto;
     -webkit-overflow-scrolling: touch; /* Ensures smooth scrolling on iOS */
-    min-height: 100vh;
 }
